--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -182,7 +182,9 @@ if type starship >/dev/null 2>&1; then
     eval "$(starship init bash)"
 fi
 
-# keychain
-if type keychain >/dev/null 2>&1; then
+# ssh-agent
+if type wsl2-ssh-agent >/dev/null 2>&1; then
+    eval "$(wsl2-ssh-agent)"
+elif type keychain >/dev/null 2>&1; then
     eval "$(keychain --eval id_ed25519)"
 fi
