fzf: stop using fzf from git (temporary?)
- do not work well, especially with tmux (WSL2)
- showing "empty command"

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -156,7 +156,9 @@ if _have fzf; then
     else
         export FZF_TMUX=0
     fi
-    export FZF_DEFAULT_OPTS="--ansi --height 50% --reverse --border --cycle"
+    export FZF_DEFAULT_COMMAND='rg --color always --files --no-ignore --hidden --follow -g "!{.git,node_modules}/*" 2> /dev/null'
+    export FZF_DEFAULT_OPTS=" --tiebreak=index --ansi --height 50% --reverse --border --cycle"
+    export FZF_CTRL_T_COMMAND="$FZF_DEFAULT_COMMAND"
     export FZF_CTRL_T_OPTS="--select-1 --exit-0"
     export FZF_CTRL_R_OPTS="--preview 'echo {}' --preview-window down:3:hidden:wrap --bind '?:toggle-preview'"
     export FZF_ALT_C_OPTS="--select-1 --exit-0 --preview 'tree -C {} | head -200'"
